[refactor] 변수 네이밍 변경